--- a/frontEnd.html
+++ b/frontEnd.html
@@ -17,7 +17,7 @@
       </div>
 
             </div>
-    <div id="result_container" style="display: none;"><p id="result"></p></div>
+    <div id="result_container"><p id="result"></p></div>
     <script src="main.js"></script>
   </body>
 </html>
