--- a/frontEnd.html
+++ b/frontEnd.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="frontEnd.css">
   </head>
   <body>
     <h1 id="Header" style="display: block;">Image Verifier</h1>
@@ -18,6 +18,6 @@
 
             </div>
     <div id="result_container"><p id="result"></p></div>
-    <script src="main.js"></script>
+    <script src="frontEnd.js"></script>
   </body>
 </html>
